@@ -1,22 +1,23 @@
 package com.example.music.ServiceImpl;
 
-import static java.net.URLEncoder.encode;
-
 import com.example.music.Objects.YoutubeApiResponse;
 import com.example.music.Objects.Item;
 import com.example.music.Services.YoutubeService;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.InputStreamResource;
-import org.springframework.http.MediaType;
 import org.springframework.stereotype.Service;
-import com.example.music.Objects.YoutubeVideo;
+import com.example.music.entity.YoutubeVideo;
+import org.springframework.beans.factory.annotation.Autowired;
+import com.example.music.dto.YoutubeVideoDto;
+import com.example.music.repository.YoutubeVideoRepository;
 
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -25,42 +26,36 @@ import org.springframework.context.annotation.PropertySource;
 @Service
 @PropertySource("classpath:secrets.properties")
 public class YoutubeServiceImpl implements YoutubeService {
+
+    @Autowired
+    private YoutubeVideoRepository youtubeVideoRepository;
+
     @Value("${youtube.api.key}")
     private String apiKey;
-    public List<YoutubeVideo> fetchVideos(String keyword) {
-//        System.out.println(apiKey);
+    public List<YoutubeVideoDto> fetchVideos(String keyword) {
         String apiUrl = "https://www.googleapis.com/youtube/v3/search";
-        List<YoutubeVideo> videos = new ArrayList<>();
+        List<YoutubeVideoDto> videos = new ArrayList<>();
         try {
-            String encodedKeyword = URLEncoder.encode(keyword, "UTF-8");
-            int n=2;
+            String encodedKeyword = URLEncoder.encode(keyword, StandardCharsets.UTF_8);
+            int n=10;
             String queryUrl = String.format(
                     "%s?q=%s&part=snippet&type=video&maxResults="+Integer.toString(n)+"&key=%s",
                     apiUrl, encodedKeyword, apiKey
             );
-            System.out.println(apiKey);
-            System.out.println(queryUrl);
             Process process = new ProcessBuilder("curl", "-s", queryUrl).start();
 
             BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
             String json = reader.lines().collect(Collectors.joining());
-
-//            // Parse JSON response using Jackson (ObjectMapper)
             ObjectMapper objectMapper = new ObjectMapper();
             YoutubeApiResponse response = objectMapper.readValue(json, YoutubeApiResponse.class);
-            // Iterate over the "items" list to extract video details
             for (Item item : response.getItems()) {
                 String title = item.getSnippet().getTitle();
                 String videoId = item.getId().getVideoId();
-
-                // Create YouTubeVideo object and add to the list
-                YoutubeVideo video = new YoutubeVideo();
-                video.setTitle(title);
-                video.setVideoUrl("https://www.youtube.com/watch?v=" + videoId);
-                videos.add(video);
-//                downloadAudio(video.getVideoUrl());
+                videos.add(YoutubeVideoDto.builder()
+                        .title(title)
+                        .videoUrl("https://www.youtube.com/watch?v=" + videoId)
+                        .build());
             }
-            System.out.println(videos);
 
         } catch (Exception e) {
             e.printStackTrace();
@@ -68,36 +63,25 @@ public class YoutubeServiceImpl implements YoutubeService {
         return videos;
     }
 
-    public void downloadAudio(String videoUrl) {
-
-            System.out.println(videoUrl);
-            String command = String.format("yt-dlp -x --audio-format mp3 -o 'downloads/%%(title)s.%%(ext)s' %s", videoUrl);
+    public InputStreamResource streamAudio(String videoUrl, String title) {
+        try {
+            String command = String.format("yt-dlp -x --audio-format mp3 -o - %s", videoUrl);
             System.out.println(command);
-        Process process = null;
-        try {
-            process = Runtime.getRuntime().exec(command);
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
-        try {
-            process.waitFor();
-        } catch (InterruptedException e) {
-            throw new RuntimeException(e);
+            long startTime = System.nanoTime();
+            Process process = Runtime.getRuntime().exec(command);
+            InputStream audioStream = process.getInputStream();
+
+            InputStreamResource resource = new InputStreamResource(audioStream);
+            long endTime = System.nanoTime();
+            long duration = endTime - startTime;
+            double durationInSeconds = duration / 1_000_000.0;
+            System.out.println("yt-dlp execution time: " + durationInSeconds + " milliseconds");
+
+
+            return resource;
+        } catch (IOException ex) {
+            throw new RuntimeException(ex);
         }
     }
 
-    public InputStreamResource streamAudio(String videoUrl) {
-            try {
-                String command = String.format("yt-dlp -x --audio-format mp3 -o - %s", videoUrl);
-                System.out.println(command);
-                Process process = Runtime.getRuntime().exec(command);
-                InputStream audioStream = process.getInputStream();
-
-                InputStreamResource resource = new InputStreamResource(audioStream);
-
-                return resource;
-            } catch (IOException ex) {
-                throw new RuntimeException(ex);
-            }
-    }
 }
